Make `mcp` an optional dep. (#9)
Since it is not expected to be used by default and it is kind of heavy (brings `starlette`, `uvicorn`, etc).

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,7 +28,7 @@ jobs:
           cache: "pip"
 
       - name: Install
-        run: pip install -e '.[langchain,smolagents,openai,tests]'
+        run: pip install -e '.[mcp,langchain,smolagents,openai,tests]'
 
       - name: Run Unit tests
         run: pytest -v tests/unit
