Improvements to integration tests (#61)
* tests: Improvements to integration tests.

- Use `gemini/gemini-2.0-flash` via LiteLLM for frameworks that support it.
- Add `setup_tracing` for frameworks that support it.
- Use `ANY_AGENT_INTEGRATION_TESTS` env var. Closes #34

* tests: Set env vars for integration tests.

* tests: Use `-s`  in integration tests

* tests: Don't use `-s` in CI

* tests: Add `refresh_tools` fixture.

Fix smolagents tests failure.

* fix(frameworks): Set default `self._agent_loaded`

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -34,4 +34,7 @@ jobs:
         run: pytest -v tests/unit
 
       - name: Run Integration tests
+        env:
+          ANY_AGENT_INTEGRATION_TESTS: TRUE
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: pytest -v tests/integration
