--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,5 +36,5 @@ jobs:
       - name: Run Integration tests
         env:
           ANY_AGENT_INTEGRATION_TESTS: TRUE
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: pytest -v tests/integration
