--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Install
         run: pip install -e '.[all,tests]'
 
+      - name: Run Documentation tests
+        run: pytest -v tests/docs
+
       - name: Run Unit tests
         run: pytest -v tests/unit
 
