--- a/.github/workflows/pre-commit-update.yaml
+++ b/.github/workflows/pre-commit-update.yaml
@@ -6,6 +6,10 @@ on:
   workflow_dispatch:
 
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   pre-commit-update:
     timeout-minutes: 30
